Make sure open button is shown on smaller screens, add extra warning and remove old functionalities from the open scenario session view

--- a/app/assets/stylesheets/_general_styles.sass
+++ b/app/assets/stylesheets/_general_styles.sass
@@ -12,6 +12,7 @@ $landing-background-color: #fbf7f6
 $landing-border-color: #d0d5d8
 $soft-grey: #fdfdfd
 $dark-cream: #fdece0
+$text-light-grey: #aba8a7
 
 @mixin etm-link
   color: $link-color
